Safer win xp startup